--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,3 +18,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+/*honey-style*/
+$honey-color-first: #2d3136;
+$honey-color-second: #f6f6f7;
+$honey-color-third: #be393b;
