--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,8 @@ main img.mail-icon {
 }
 
 footer {
-  background: #2a2d33;
+  height: 100px;
+  background: #2a2d33 !important;
 }
 
 footer img {
@@ -37,8 +38,8 @@ footer img {
 }
 
 footer .socials {
-  height: 10%;
-  width: 10%;
+  height: auto !important;
+  width: 15% !important;
 }
 
 /*honey-style*/
